<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.rossevine.quis1_1572040.MainActivity">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_horizontal"
        android:ems="10"
        android:inputType="numberSigned"
        android:maxLength="15"
        android:textAlignment="textEnd"
        android:textSize="@dimen/ukuran_text_Besar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="@dimen/ukuran_text_Besar"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/del"
            android:textSize="@dimen/ukuran_text_Besar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/tujuh"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/delapan"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/sembilan"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/bagi"
            android:textSize="@dimen/ukuran_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/empat"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/lima"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/enam"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/kali"
            android:textSize="@dimen/ukuran_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/satu"
            android:textSize="@dimen/ukuran_text" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/dua"
            android:textSize="@dimen/ukuran_text"/>

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/tiga"
            android:textSize="@dimen/ukuran_text"/>

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/kurang"
            android:textSize="@dimen/ukuran_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_weight="1"
            android:text="@string/koma"
            android:textSize="@dimen/ukuran_text"/>

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/nol"
            android:textSize="@dimen/ukuran_text"/>

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/samadengan"
            android:textSize="@dimen/ukuran_text"/>

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal_kecil1"
            android:layout_weight="1"
            android:text="@string/tambah"
            android:textSize="@dimen/ukuran_text"/>
    </LinearLayout>

</LinearLayout>
